syntax = "proto3";

option go_package = "./;proto";

service Payment {
    rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
    rpc ExecutePayment(ExecutePaymentRequest) returns (ExecutePaymentResponse);
}

message CreatePaymentRequest {
    string order_sn = 1;
    string currency = 2;
    int32 total = 3;
    string token = 4;
}

message CreatePaymentResponse {
    string accept_url = 1;
}

message ExecutePaymentRequest {
    string payment_id = 1;
    string payer_id = 2;
}
message ExecutePaymentResponse {
    string msg = 1;
    string status = 2;
}